# rust-openal

./: Cargo.toml  README.md
examples/: play.rs
examples/play/: Cargo.toml
examples/play/src/: main.rs
src/: buffer.rs  capture.rs  context.rs  device.rs  error.rs  extension.rs  lib.rs  listener.rs  sample.rs  source.rs  traits.rs  util.rs
src/capture/: capture.rs  mod.rs
src/device/: capture.rs  extension.rs  mod.rs
src/listener/: attributes.rs  current.rs  listener.rs  mod.rs
src/source/: buffer.rs  buffered.rs  mod.rs  offset.rs  source.rs  state.rs  stream.rs  unsafe_buffer.rs
