[package]
name    = "openal"
version = "0.1.1"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "OpenAL wrapper"
repository  = "https://github.com/meh/rust-openal"
keywords    = ["audio"]

[dependencies]
libc = "*"

[dependencies.openal-sys]
version = "1.16.0"

[dev-dependencies.ffmpeg]
git = "git://github.com/meh/rust-ffmpeg"
