[package]
name    = "openal"
version = "0.2.1"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "OpenAL wrapper"
repository  = "https://github.com/meh/rust-openal"
keywords    = ["audio"]

[dependencies]
libc = "*"
openal-sys = "*"

[dev-dependencies]
ffmpeg = "*"

[features]
static = ["openal-sys/static"]
