[package]
name    = "openal"
version = "0.2.2"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "OpenAL wrapper"
repository  = "https://github.com/meh/rust-openal"
keywords    = ["audio"]

[dependencies]
libc       = "0.2"
openal-sys = "1.16"

[dev-dependencies]
ffmpeg = "0.2.0-alpha.1"

[features]
static = ["openal-sys/static"]
